# rusty_book_manager_dev

./: Cargo.toml  devcontainer.json
.devcontainer/: devcontainer.json
adapter/src/: lib.rs
adapter/src/database/: mod.rs
adapter/src/repository/: health.rs
api/src/handler/: health.rs
kernel/src/repository/: health.rs
registry/src/: lib.rs
src/: main.rs
